--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.5",
+    "create-readme": "^2.1.3",
     "debug": "^4.3.1",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
